--- a/analyzing.ipynb
+++ b/analyzing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -78,69 +78,69 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1009.9</td>\n",
-       "      <td>1015.1</td>\n",
+       "      <td>1013.5</td>\n",
+       "      <td>1018.8</td>\n",
        "      <td>nan</td>\n",
        "      <td>nan</td>\n",
        "      <td>nan</td>\n",
-       "      <td>9.4</td>\n",
-       "      <td>12.6</td>\n",
-       "      <td>7.3</td>\n",
-       "      <td>50.0</td>\n",
-       "      <td>38.0</td>\n",
+       "      <td>7.4</td>\n",
+       "      <td>12.1</td>\n",
+       "      <td>2.3</td>\n",
+       "      <td>59.0</td>\n",
+       "      <td>39.0</td>\n",
        "      <td>...</td>\n",
        "      <td>北</td>\n",
-       "      <td>9.2</td>\n",
-       "      <td>北北西</td>\n",
-       "      <td>5.7</td>\n",
+       "      <td>11.2</td>\n",
+       "      <td>北</td>\n",
+       "      <td>9.5</td>\n",
        "      <td>nan</td>\n",
        "      <td>nan</td>\n",
-       "      <td>晴時々曇</td>\n",
+       "      <td>晴</td>\n",
        "      <td>晴</td>\n",
        "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1013.1</td>\n",
-       "      <td>1018.4</td>\n",
-       "      <td>nan</td>\n",
-       "      <td>nan</td>\n",
-       "      <td>nan</td>\n",
-       "      <td>9.2</td>\n",
-       "      <td>13.6</td>\n",
-       "      <td>5.5</td>\n",
-       "      <td>56.0</td>\n",
-       "      <td>41.0</td>\n",
+       "      <td>1013.4</td>\n",
+       "      <td>1018.6</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>6.9</td>\n",
+       "      <td>11.1</td>\n",
+       "      <td>4.3</td>\n",
+       "      <td>51.0</td>\n",
+       "      <td>30.0</td>\n",
        "      <td>...</td>\n",
        "      <td>北</td>\n",
-       "      <td>7.5</td>\n",
-       "      <td>北北西</td>\n",
        "      <td>9.6</td>\n",
+       "      <td>北</td>\n",
+       "      <td>6.3</td>\n",
        "      <td>nan</td>\n",
        "      <td>nan</td>\n",
-       "      <td>晴</td>\n",
-       "      <td>晴</td>\n",
+       "      <td>晴後曇一時雨</td>\n",
+       "      <td>晴時々曇</td>\n",
        "      <td>1.0</td>\n",
        "      <td>2.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>1013.2</td>\n",
-       "      <td>1018.4</td>\n",
+       "      <td>1012.8</td>\n",
+       "      <td>1018.1</td>\n",
        "      <td>nan</td>\n",
        "      <td>nan</td>\n",
        "      <td>nan</td>\n",
-       "      <td>9.7</td>\n",
-       "      <td>14.9</td>\n",
-       "      <td>5.2</td>\n",
-       "      <td>56.0</td>\n",
-       "      <td>40.0</td>\n",
+       "      <td>6.5</td>\n",
+       "      <td>10.9</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>45.0</td>\n",
+       "      <td>36.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>南西</td>\n",
-       "      <td>13.5</td>\n",
-       "      <td>南西</td>\n",
-       "      <td>8.4</td>\n",
+       "      <td>北</td>\n",
+       "      <td>9.6</td>\n",
+       "      <td>北</td>\n",
+       "      <td>9.4</td>\n",
        "      <td>nan</td>\n",
        "      <td>nan</td>\n",
        "      <td>晴</td>\n",
@@ -150,76 +150,232 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>1015.8</td>\n",
-       "      <td>1021.1</td>\n",
+       "      <td>1012.8</td>\n",
+       "      <td>1018.1</td>\n",
        "      <td>nan</td>\n",
        "      <td>nan</td>\n",
        "      <td>nan</td>\n",
-       "      <td>9.9</td>\n",
-       "      <td>14.7</td>\n",
-       "      <td>6.0</td>\n",
+       "      <td>5.9</td>\n",
+       "      <td>10.5</td>\n",
+       "      <td>2.1</td>\n",
        "      <td>48.0</td>\n",
-       "      <td>29.0</td>\n",
+       "      <td>35.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>北北西</td>\n",
-       "      <td>8.7</td>\n",
        "      <td>北</td>\n",
-       "      <td>9.6</td>\n",
+       "      <td>12.8</td>\n",
+       "      <td>北</td>\n",
+       "      <td>7.9</td>\n",
        "      <td>nan</td>\n",
        "      <td>nan</td>\n",
        "      <td>晴</td>\n",
-       "      <td>曇時々晴</td>\n",
+       "      <td>晴</td>\n",
        "      <td>1.0</td>\n",
        "      <td>4.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>1013.9</td>\n",
-       "      <td>1019.1</td>\n",
-       "      <td>0.5 )</td>\n",
-       "      <td>0.5 )</td>\n",
-       "      <td>0.5 )</td>\n",
-       "      <td>8.5</td>\n",
-       "      <td>10.1</td>\n",
-       "      <td>6.8</td>\n",
-       "      <td>60.0</td>\n",
-       "      <td>52.0</td>\n",
+       "      <td>1016.4</td>\n",
+       "      <td>1021.7</td>\n",
+       "      <td>nan</td>\n",
+       "      <td>nan</td>\n",
+       "      <td>nan</td>\n",
+       "      <td>6.2</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>2.9</td>\n",
+       "      <td>36.0</td>\n",
+       "      <td>20.0</td>\n",
        "      <td>...</td>\n",
        "      <td>北</td>\n",
-       "      <td>8.8</td>\n",
+       "      <td>9.7</td>\n",
        "      <td>北</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>8.9</td>\n",
        "      <td>nan</td>\n",
        "      <td>nan</td>\n",
-       "      <td>曇</td>\n",
-       "      <td>雨時々曇</td>\n",
+       "      <td>晴</td>\n",
+       "      <td>晴</td>\n",
        "      <td>1.0</td>\n",
        "      <td>5.0</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>360</th>\n",
+       "      <td>1020.2</td>\n",
+       "      <td>1025.4</td>\n",
+       "      <td>nan</td>\n",
+       "      <td>nan</td>\n",
+       "      <td>nan</td>\n",
+       "      <td>8.8</td>\n",
+       "      <td>13.3</td>\n",
+       "      <td>5.2</td>\n",
+       "      <td>52.0</td>\n",
+       "      <td>41.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>北</td>\n",
+       "      <td>11.9</td>\n",
+       "      <td>北</td>\n",
+       "      <td>6.1</td>\n",
+       "      <td>nan</td>\n",
+       "      <td>nan</td>\n",
+       "      <td>曇時々晴</td>\n",
+       "      <td>曇時々晴</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>27.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>361</th>\n",
+       "      <td>1020.1</td>\n",
+       "      <td>1025.4</td>\n",
+       "      <td>nan</td>\n",
+       "      <td>nan</td>\n",
+       "      <td>nan</td>\n",
+       "      <td>8.1</td>\n",
+       "      <td>11.4</td>\n",
+       "      <td>6.4</td>\n",
+       "      <td>53.0</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>北</td>\n",
+       "      <td>8.6</td>\n",
+       "      <td>北</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>nan</td>\n",
+       "      <td>nan</td>\n",
+       "      <td>晴時々曇</td>\n",
+       "      <td>晴</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>28.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>362</th>\n",
+       "      <td>1016.0</td>\n",
+       "      <td>1021.2</td>\n",
+       "      <td>nan</td>\n",
+       "      <td>nan</td>\n",
+       "      <td>nan</td>\n",
+       "      <td>8.8</td>\n",
+       "      <td>13.4</td>\n",
+       "      <td>4.1</td>\n",
+       "      <td>59.0</td>\n",
+       "      <td>44.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>北北西</td>\n",
+       "      <td>5.6</td>\n",
+       "      <td>北</td>\n",
+       "      <td>9.3</td>\n",
+       "      <td>nan</td>\n",
+       "      <td>nan</td>\n",
+       "      <td>晴</td>\n",
+       "      <td>晴</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>29.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>363</th>\n",
+       "      <td>1014.9</td>\n",
+       "      <td>1020.1</td>\n",
+       "      <td>nan</td>\n",
+       "      <td>nan</td>\n",
+       "      <td>nan</td>\n",
+       "      <td>9.8</td>\n",
+       "      <td>14.6</td>\n",
+       "      <td>5.9</td>\n",
+       "      <td>60.0</td>\n",
+       "      <td>38.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>北</td>\n",
+       "      <td>7.6</td>\n",
+       "      <td>北</td>\n",
+       "      <td>8.3</td>\n",
+       "      <td>nan</td>\n",
+       "      <td>nan</td>\n",
+       "      <td>晴</td>\n",
+       "      <td>曇一時晴後一時雨</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>30.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>364</th>\n",
+       "      <td>1001.7</td>\n",
+       "      <td>1006.8</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>9.6</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>6.9</td>\n",
+       "      <td>76.0</td>\n",
+       "      <td>62.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>北</td>\n",
+       "      <td>7.3</td>\n",
+       "      <td>北</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>nan</td>\n",
+       "      <td>nan</td>\n",
+       "      <td>雨後晴時々曇</td>\n",
+       "      <td>曇時々晴一時雨</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>31.0</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 22 columns</p>\n",
+       "<p>365 rows × 22 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "     現地気圧    海面気圧   降水合計  1時間降水  10分降水  平均気温  最高気温 最低気温  平均湿度  最小湿度  ...   風向  \\\n",
-       "0  1009.9  1015.1    nan    nan    nan   9.4  12.6  7.3  50.0  38.0  ...    北   \n",
-       "1  1013.1  1018.4    nan    nan    nan   9.2  13.6  5.5  56.0  41.0  ...    北   \n",
-       "2  1013.2  1018.4    nan    nan    nan   9.7  14.9  5.2  56.0  40.0  ...   南西   \n",
-       "3  1015.8  1021.1    nan    nan    nan   9.9  14.7  6.0  48.0  29.0  ...  北北西   \n",
-       "4  1013.9  1019.1  0.5 )  0.5 )  0.5 )   8.5  10.1  6.8  60.0  52.0  ...    北   \n",
+       "       現地気圧    海面気圧 降水合計 1時間降水 10分降水  平均気温  最高気温 最低気温  平均湿度  最小湿度  ...   風向  \\\n",
+       "0    1013.5  1018.8  nan   nan   nan   7.4  12.1  2.3  59.0  39.0  ...    北   \n",
+       "1    1013.4  1018.6  0.0   0.0   0.0   6.9  11.1  4.3  51.0  30.0  ...    北   \n",
+       "2    1012.8  1018.1  nan   nan   nan   6.5  10.9  3.0  45.0  36.0  ...    北   \n",
+       "3    1012.8  1018.1  nan   nan   nan   5.9  10.5  2.1  48.0  35.0  ...    北   \n",
+       "4    1016.4  1021.7  nan   nan   nan   6.2  11.0  2.9  36.0  20.0  ...    北   \n",
+       "..      ...     ...  ...   ...   ...   ...   ...  ...   ...   ...  ...  ...   \n",
+       "360  1020.2  1025.4  nan   nan   nan   8.8  13.3  5.2  52.0  41.0  ...    北   \n",
+       "361  1020.1  1025.4  nan   nan   nan   8.1  11.4  6.4  53.0  40.0  ...    北   \n",
+       "362  1016.0  1021.2  nan   nan   nan   8.8  13.4  4.1  59.0  44.0  ...  北北西   \n",
+       "363  1014.9  1020.1  nan   nan   nan   9.8  14.6  5.9  60.0  38.0  ...    北   \n",
+       "364  1001.7  1006.8  2.5   1.0   0.5   9.6  13.0  6.9  76.0  62.0  ...    北   \n",
        "\n",
-       "  最大瞬間風速 最大瞬間風向 日照時間   降雪   積雪     昼     夜    月    日  \n",
-       "0    9.2    北北西  5.7  nan  nan  晴時々曇     晴  1.0  1.0  \n",
-       "1    7.5    北北西  9.6  nan  nan     晴     晴  1.0  2.0  \n",
-       "2   13.5     南西  8.4  nan  nan     晴     晴  1.0  3.0  \n",
-       "3    8.7      北  9.6  nan  nan     晴  曇時々晴  1.0  4.0  \n",
-       "4    8.8      北  0.0  nan  nan     曇  雨時々曇  1.0  5.0  \n",
+       "    最大瞬間風速 最大瞬間風向 日照時間   降雪   積雪       昼         夜     月     日  \n",
+       "0     11.2      北  9.5  nan  nan       晴         晴   1.0   1.0  \n",
+       "1      9.6      北  6.3  nan  nan  晴後曇一時雨      晴時々曇   1.0   2.0  \n",
+       "2      9.6      北  9.4  nan  nan       晴         晴   1.0   3.0  \n",
+       "3     12.8      北  7.9  nan  nan       晴         晴   1.0   4.0  \n",
+       "4      9.7      北  8.9  nan  nan       晴         晴   1.0   5.0  \n",
+       "..     ...    ...  ...  ...  ...     ...       ...   ...   ...  \n",
+       "360   11.9      北  6.1  nan  nan    曇時々晴      曇時々晴  12.0  27.0  \n",
+       "361    8.6      北  4.5  nan  nan    晴時々曇         晴  12.0  28.0  \n",
+       "362    5.6      北  9.3  nan  nan       晴         晴  12.0  29.0  \n",
+       "363    7.6      北  8.3  nan  nan       晴  曇一時晴後一時雨  12.0  30.0  \n",
+       "364    7.3      北  3.5  nan  nan  雨後晴時々曇   曇時々晴一時雨  12.0  31.0  \n",
        "\n",
-       "[5 rows x 22 columns]"
+       "[365 rows x 22 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -227,7 +383,7 @@
    "source": [
     "df = pd.DataFrame(data, columns=[\"現地気圧\", \"海面気圧\", \"降水合計\", \"1時間降水\", \"10分降水\", \"平均気温\", \"最高気温\", \"最低気温\",\n",
     "    \"平均湿度\", \"最小湿度\", \"平均風速\", \"最大風速\", \"風向\", \"最大瞬間風速\", \"最大瞬間風向\", \"日照時間\", \"降雪\", \"積雪\", \"昼\", \"夜\", \"月\", \"日\"])\n",
-    "df.head()"
+    "df"
    ]
   },
   {
