--- a/trash/test.ipynb
+++ b/trash/test.ipynb
@@ -20,6 +20,146 @@
    "source": [
     "現地気圧 REAL,海面気圧 REAL,降水合計 REAL,1時間降水 REAL,10分降水 REAL,平均気温 REAL,最高気温 REAL,最低気温 REAL,平均湿度 REAL,最小湿度 REAL,平均風速 REAL,最大風速 REAL,風向 TEXT,最大瞬間風速 REAL,最大瞬間風向 TEXT,日照時間 REAL,降雪 REAL,積雪 REAL,昼 TEXT,夜 TEXT"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from datetime import datetime"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>年月日</th>\n",
+       "      <th>出費</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2023-01-01</td>\n",
+       "      <td>3470</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2023-01-02</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2023-01-03</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2023-01-04</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2023-01-05</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4375</th>\n",
+       "      <td>2023-12-27</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4376</th>\n",
+       "      <td>2023-12-28</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4377</th>\n",
+       "      <td>2023-12-29</td>\n",
+       "      <td>4170</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4378</th>\n",
+       "      <td>2023-12-30</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4379</th>\n",
+       "      <td>2023-12-31</td>\n",
+       "      <td>3030</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>4380 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             年月日    出費\n",
+       "0     2023-01-01  3470\n",
+       "1     2023-01-02     0\n",
+       "2     2023-01-03     0\n",
+       "3     2023-01-04     0\n",
+       "4     2023-01-05     0\n",
+       "...          ...   ...\n",
+       "4375  2023-12-27     0\n",
+       "4376  2023-12-28     0\n",
+       "4377  2023-12-29  4170\n",
+       "4378  2023-12-30     0\n",
+       "4379  2023-12-31  3030\n",
+       "\n",
+       "[4380 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_csv(\"/Users/satoya01/Lectures/Lecture_2/ds_program/final/code/trash/spendings_std_1000.csv\")\n",
+    "df[\"出費\"] = df[\"出費\"].round(-1).astype(int)\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path = '../db/出費.csv'\n",
+    "df.to_csv(path, index=False)"
+   ]
   }
  ],
  "metadata": {
@@ -29,7 +169,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.11.5"
   }
  },
