scraping.pyのミスに気づいた。特に変更はしていない。

--- a/analyzing.ipynb
+++ b/analyzing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 281,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 282,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 283,
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +195,7 @@
        "[4380 rows x 7 columns]"
       ]
      },
-     "execution_count": 206,
+     "execution_count": 283,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 284,
    "metadata": {},
    "outputs": [
     {
@@ -376,7 +376,7 @@
        "[2304 rows x 6 columns]"
       ]
      },
-     "execution_count": 207,
+     "execution_count": 284,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -391,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 285,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 286,
    "metadata": {},
    "outputs": [
     {
@@ -506,7 +506,7 @@
        "[1121 rows x 2 columns]"
       ]
      },
-     "execution_count": 217,
+     "execution_count": 286,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -515,24 +515,38 @@
     "# 日付を合わせ、出費が0の日を排除\n",
     "dates_1 = sun_day[\"年月日\"].tolist()\n",
     "spending[\"年月日\"] = pd.to_datetime(spending[\"年月日\"])\n",
+    "\n",
+    "# rows_to_drop = spending[spending[\"年月日\"].isin(dates_1)].index\n",
+    "# spending = spending.drop(rows_to_drop)\n",
+    "\n",
     "spending = spending[spending[\"年月日\"].isin(dates_1)]\n",
     "\n",
     "spending = spending[spending[\"出費\"] != 0]\n",
     "\n",
-    "# dates_2 = spending[\"年月日\"].tolist()\n",
-    "# sun_day[\"年月日\"] = pd.to_datetime(sun_day[\"年月日\"])\n",
+    "dates_2 = spending[\"年月日\"].tolist()\n",
+    "\n",
+    "# rows_to_drop = sun_day[sun_day[\"年月日\"].isin(dates_2)].index\n",
+    "# sun_day = sun_day.drop(rows_to_drop)\n",
+    "\n",
     "# sun_day = sun_day[sun_day[\"年月日\"].isin(dates_2)]\n",
-    "# sun_day[\"年月日\"]\n",
-    "# spending[\"年月日\"]\n",
-    "# sun_day\n",
-    "# spending\n",
-    "# dates_2\n",
-    "spending"
+    "\n",
+    "spending\n",
+    "# sun_day\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 287,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sun_day.to_csv(\"./trash/a.csv\", index=False)\n",
+    "spending.to_csv(\"./trash/b.csv\", index=False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 288,
    "metadata": {},
    "outputs": [],
    "source": [
